feat: password reset API
